# lecture_notes

./: README.md
CSS/: 00_Course_Outline.md
CSS/exercises/: CSS_Exercises.md  CSS_Solutions.md
CSS/handouts/: Class1_Handout.md  Class2_Handout.md  Class3_Handout.md  Class4_Handout.md
CSS/lesson_plans/: Class1_Lesson_Plan.md  Class2_Lesson_Plan.md  Class3_Lesson_Plan.md  Class4_Lesson_Plan.md
HTML/: 00_Course_Outline.md
HTML/exercises/: Class_1.html  Class_1_Evening.html  HTML_Exercises.md  HTML_Solutions.md  about.html
HTML/handouts/: Class1_Handout.md  Class2_Handout.md  Class3_Handout.md  Class4_Handout.md
HTML/lesson_plans/: Class1_Lesson_Plan.md  Class2_Lesson_Plan.md  Class3_Lesson_Plan.md  Class4_Lesson_Plan.md
JavaScript/: 00_Course_Outline.md
JavaScript/exercises/: JavaScript Advanced Projects: Full-Stack Features.md  JavaScript_Exercises.md  JavaScript_Solutions.md
JavaScript/handouts/: Class1_Handout.md  Classes2to8_Handouts.md
JavaScript/lesson_plans/: Class1_Lesson_Plan.md  Class2_Lesson_Plan.md  Class3_Lesson_Plan.md  Class4_Lesson_Plan.md  Classes5to8_Lesson_Plans.md
Python/: 00_Course_Outline.md
Python/Robotics_Python/: .gitignore  00_Robotics_Python_Course_Outline.md  I2C_Addresses_Explained.md  Resources.md  fleet.json  robot_config.json
Python/data/: config.json  expenses.csv  (+1 more)
React/: 00_Course_Outline.md
React_Native/: 00_Course_Outline.md
Starter_Files/: README.md
Starter_Files/Python/: README.md  main.py  pyproject.toml  utils.py
Starter_Files/Python/tests/: test_utils.py
Welcome/: Student_Welcome_Guide.md
(+64 files in other folders)
