# pyproject.toml
# ============================================================
# Deejoft Coding School | Python Course Starter
# Modern Python project configuration
# ============================================================
# How to use:
#   uv init my-project     (create a new project)
#   cd my-project
#   uv sync                (install dependencies)
#   uv run python main.py  (run your script)
#   uv run pytest          (run tests)
# ============================================================

[project]
name = "my-project"
version = "1.0.0"
description = "A short description of your project"
requires-python = ">=3.12"
dependencies = [
    # Add your runtime dependencies here
    # e.g. "httpx>=0.27"
    # e.g. "typer>=0.12"
    # e.g. "rich>=13"
]

# If you want to run this as a CLI command:
# [project.scripts]
# my-tool = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
# Enable commonly useful rule sets
select = ["E", "F", "W", "I"]   # pycodestyle, pyflakes, warnings, isort
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
